--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-validator": "^5.3.1",
+    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.11.12",
     "uuid": "^8.3.2"
   },
